--- a/Assuty/feed.html
+++ b/Assuty/feed.html
@@ -8,29 +8,29 @@
   <!-- Tell the browser to be responsive to screen width -->
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
   <!-- Bootstrap 3.3.5 -->
-  <link rel="stylesheet" href="../Template/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="Assets/bootstrap/css/bootstrap.min.css">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <!-- Ionicons -->
   <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
   <!-- Theme style -->
-  <link rel="stylesheet" href="../Template/dist/css/AdminLTE.css">
+  <link rel="stylesheet" href="Assets/dist/css/AdminLTE.css">
   <!-- AdminLTE Skins. Choose a skin from the css/skins
          folder instead of downloading all of them to reduce the load. -->
-  <link rel="stylesheet" href="../Template/dist/css/skins/_all-skins.min.css">
+  <link rel="stylesheet" href="Assets/dist/css/skins/_all-skins.min.css">
   <!-- iCheck -->
-  <link rel="stylesheet" href="../Template/plugins/iCheck/flat/blue.css">
+  <link rel="stylesheet" href="Assets/plugins/iCheck/flat/blue.css">
   <!-- Morris chart -->
-  <link rel="stylesheet" href="../Template/plugins/morris/morris.css">
+  <link rel="stylesheet" href="Assets/plugins/morris/morris.css">
   <!-- jvectormap -->
-  <link rel="stylesheet" href="../Template/plugins/jvectormap/jquery-jvectormap-1.2.2.css">
+  <link rel="stylesheet" href="Assets/plugins/jvectormap/jquery-jvectormap-1.2.2.css">
   <!-- Date Picker -->
-  <link rel="stylesheet" href="../Template/plugins/datepicker/datepicker3.css">
+  <link rel="stylesheet" href="Assets/plugins/datepicker/datepicker3.css">
   <!-- Daterange picker -->
-  <link rel="stylesheet" href="../Template/plugins/daterangepicker/daterangepicker-bs3.css">
+  <link rel="stylesheet" href="Assets/plugins/daterangepicker/daterangepicker-bs3.css">
   <!-- bootstrap wysihtml5 - text editor -->
-  <link rel="stylesheet" href="../Template/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css">
-  <link rel="stylesheet" href="../Template/assets/css/style.css">
+  <link rel="stylesheet" href="Assets/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css">
+  <link rel="stylesheet" href="Assets/twitter-feed/css/style.css">
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
   <!--[if lt IE 9]>
@@ -103,13 +103,13 @@
             <!-- User Account: style can be found in dropdown.less -->
             <li class="dropdown user user-menu">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                <img src="../Template/dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
+                <img src="Assets/dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
                 <span class="hidden-xs">Alexander Pierce</span>
               </a>
               <ul class="dropdown-menu">
                 <!-- User image -->
                 <li class="user-header">
-                  <img src="../Template/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                  <img src="Assets/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
                   <p>
                     Alexander Pierce - Web Developer
                     <small>Member since Nov. 2012</small>
@@ -137,7 +137,7 @@
         <!-- Sidebar user panel -->
         <div class="user-panel">
           <div class="pull-left image">
-            <img src="../Template/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+            <img src="Assets/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
           </div>
           <div class="pull-left info">
             <p>Alexander Pierce</p>
@@ -157,10 +157,10 @@
         <!-- sidebar menu: : style can be found in sidebar.less -->
         <ul class="sidebar-menu">
           <li class="header">MAIN NAVIGATION</li>
-          <li><a href="agent-workspace.html"><i class="fa fa-cogs"></i> <span>Workspace</span></a></li>
+          <li ><a href="agent-workspace.html"><i class="fa fa-cogs"></i> <span>Workspace</span></a></li>
           <li><a href="profile.html"><i class="fa fa-user"></i> <span>Profile</span></a></li>
-          <li ><a href="feed.html"><i class="fa fa-dashboard"></i> <span>Feed</span></a></li>
-          <li><a href="../Assuty/statistics.html"><i class="fa fa-pie-chart"></i> <span>Statistics</span></a></li>
+          <li class="active"><a href="feed.html"><i class="fa fa-dashboard"></i> <span>Feed</span></a></li>
+          <li><a href="statistics.html"><i class="fa fa-pie-chart"></i> <span>Statistics</span></a></li>
           <li class="treeview">
             <a href="#">
               <i class="fa fa-ellipsis-h"></i> <span>Settings</span>
@@ -185,83 +185,74 @@
       <section class="content-header">
         <ol class="breadcrumb">
           <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-          <li class="active">Ticket</li>
+          <li class="active">Feed</li>
         </ol>
       </section>
       <div class="row">
         <div class="col-lg-10 col-lg-offset-1 col-md-10 col-m-offset-1 col-sm-10 col-sm-offset-10">
           <!-- TWEET WRAPPER START -->
-          <div class="box box-success">
-                <div class="box-header">
-                  <i class="fa fa-comments-o"></i>
-                  <h3 class="box-title">Chat</h3>
-                  <div class="box-tools pull-right" data-toggle="tooltip" title="Status">
-                    <div class="btn-group" data-toggle="btn-toggle" >
-                      <button type="button" class="btn btn-default btn-sm active"><i class="fa fa-square text-green"></i></button>
-                      <button type="button" class="btn btn-default btn-sm"><i class="fa fa-square text-red"></i></button>
+          <div class="twt-wrapper">
+            <div class="panel panel-info">
+              <div class="panel-heading">
+                @company feed
+              </div>
+              <div class="panel-body">
+                <textarea class="form-control" placeholder="Enter here for tweet..." rows="3"></textarea>
+                <br />
+                <a href="#" class="btn btn-primary btn-sm pull-right">Tweet</a>
+                <div class="clearfix"></div>
+                <hr />
+                <ul class="media-list">
+                  <li class="media">
+                    <div class="profile-img-container pull-left">
+                      <a class="add-icon"><span class="glyphicon glyphicon-plus"></span></a>
+                      <img src="Assets/twitter-feed/img/1.png" alt="" class="img-circle">
                     </div>
-                  </div>
-                </div>
-                <div class="box-body chat" id="chat-box">
-                  <!-- chat item -->
-                  <div class="item">
-                    <img src="../Template/dist/img/user4-128x128.jpg" alt="user image" class="online">
-                    <p class="message">
-                      <a href="#" class="name">
-                        <small class="text-muted pull-right"><i class="fa fa-clock-o"></i> 2:15</small>
-                        Mike Doe
-                      </a>
-                      I would like to meet you to discuss the latest news about
-                      the arrival of the new theme. They say it is going to be one the
-                      best themes on the market
-                    </p>
-                    
-                  </div><!-- /.item -->
-                  <!-- chat item -->
-                  <div class="item">
-                    <img src="../Template/dist/img/user3-128x128.jpg" alt="user image" class="offline">
-                    <p class="message">
-                      <a href="#" class="name">
-                        <small class="text-muted pull-right"><i class="fa fa-clock-o"></i> 5:15</small>
-                        Alexander Pierce
-                      </a>
-                      I would like to meet you to discuss the latest news about
-                      the arrival of the new theme. They say it is going to be one the
-                      best themes on the market
-                    </p>
-                  </div><!-- /.item -->
-                  <!-- chat item -->
-                <div class="item">
-                    <img src="../Template/dist/img/user4-128x128.jpg" alt="user image" class="online">
-                    <p class="message">
-                      <a href="#" class="name">
-                        <small class="text-muted pull-right"><i class="fa fa-clock-o"></i> 5:25</small>
-                        Mike Doe
-                      </a>
-                      I would like to meet you to discuss the latest news about
-                      the arrival of the new theme. They say it is going to be one the
-                      best themes on the market
-                    </p>
-                    <div class="attachment">
-                      <h4>Attachments:</h4>
-                      <p class="filename">
-                        Theme-thumbnail-image.jpg
+                    <div class="media-body">
+                      <span class="text-muted pull-right">
+                                            <small class="text-muted">30 min ago</small>
+                                        </span>
+                      <strong class="text-success">@ Rexona Kumi</strong>
+                      <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, <a href="#"># consectetur adipiscing </a>.
                       </p>
-                      <div class="pull-right">
-                        <button class="btn btn-primary btn-sm btn-flat">Open</button>
-                      </div>
-                    </div><!-- /.attachment -->
-                  </div><!-- /.item -->
-                </div><!-- /.chat -->
-                <div class="box-footer">
-                  <div class="input-group">
-                    <input class="form-control" placeholder="Type message...">
-                    <div class="input-group-btn">
-                      <button class="btn btn-success"><i class="fa fa-plus"></i></button>
                     </div>
-                  </div>
-                </div>
-              </div><!-- /.box (chat box) -->
+                  </li>
+                  <li class="media">
+                    <div class="profile-img-container pull-left">
+                      <a class="add-icon"><span class="glyphicon glyphicon-plus"></span></a>
+                      <img src="Assets/twitter-feed/img/2.png" alt="" class="img-circle">
+                    </div>
+                    <div class="media-body">
+                      <span class="text-muted pull-right">
+                                            <small class="text-muted">30 min ago</small>
+                                        </span>
+                      <strong class="text-success">@ John Doe</strong>
+                      <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor <a href="#"># ipsum dolor </a>adipiscing elit.
+                      </p>
+                    </div>
+                  </li>
+                  <li class="media">
+                    <div class="profile-img-container pull-left">
+                      <a class="add-icon"><span class="glyphicon glyphicon-plus"></span></a>
+                      <img src="Assets/twitter-feed/img/3.png" alt="" class="img-circle">
+                    </div>
+                    <div class="media-body">
+                      <span class="text-muted pull-right">
+                                            <small class="text-muted">30 min ago</small>
+                                        </span>
+                      <strong class="text-success">@ Madonae Jonisyi</strong>
+                      <p>
+                        Lorem ipsum dolor <a href="#"># sit amet</a> sit amet, consectetur adipiscing elit.
+                      </p>
+                    </div>
+                  </li>
+                </ul>
+                <span class="text-danger">237K users active</span>
+              </div>
+            </div>
+          </div>
           <!-- TWEET WRAPPER END -->
         </div>
       </div>
@@ -290,43 +281,43 @@
   </div>
   <!-- ./wrapper -->
   <!-- jQuery 2.1.4 -->
-  <script src="../Template/plugins/jQuery/jQuery-2.1.4.min.js"></script>
+  <script src="Assets/plugins/jQuery/jQuery-2.1.4.min.js"></script>
   <!-- jQuery UI 1.11.4 -->
   <!-- <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script> -->
-  <script type="text/javascript" src="../Template/plugins/jQueryUI/jquery-ui.js"></script>
+  <script type="text/javascript" src="Assets/plugins/jQueryUI/jquery-ui.js"></script>
   <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
   <script>
   $.widget.bridge('uibutton', $.ui.button);
   </script>
   <!-- Bootstrap 3.3.5 -->
-  <script src="../Template/bootstrap/js/bootstrap.min.js"></script>
+  <script src="Assets/bootstrap/js/bootstrap.min.js"></script>
   <!-- Morris.js charts -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
-  <script src="../Template/plugins/morris/morris.min.js"></script>
+  <script src="Assets/plugins/morris/morris.min.js"></script>
   <!-- Sparkline -->
-  <script src="../Template/plugins/sparkline/jquery.sparkline.min.js"></script>
+  <script src="Assets/plugins/sparkline/jquery.sparkline.min.js"></script>
   <!-- jvectormap -->
-  <script src="../Template/plugins/jvectormap/jquery-jvectormap-1.2.2.min.js"></script>
-  <script src="../Template/plugins/jvectormap/jquery-jvectormap-world-mill-en.js"></script>
+  <script src="Assets/plugins/jvectormap/jquery-jvectormap-1.2.2.min.js"></script>
+  <script src="Assets/plugins/jvectormap/jquery-jvectormap-world-mill-en.js"></script>
   <!-- jQuery Knob Chart -->
-  <script src="../Template/plugins/knob/jquery.knob.js"></script>
+  <script src="Assets/plugins/knob/jquery.knob.js"></script>
   <!-- daterangepicker -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.2/moment.min.js"></script>
-  <script src="../Template/plugins/daterangepicker/daterangepicker.js"></script>
+  <script src="Assets/plugins/daterangepicker/daterangepicker.js"></script>
   <!-- datepicker -->
-  <script src="../Template/plugins/datepicker/bootstrap-datepicker.js"></script>
+  <script src="Assets/plugins/datepicker/bootstrap-datepicker.js"></script>
   <!-- Bootstrap WYSIHTML5 -->
-  <script src="../Template/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.all.min.js"></script>
+  <script src="Assets/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.all.min.js"></script>
   <!-- Slimscroll -->
-  <script src="../Template/plugins/slimScroll/jquery.slimscroll.min.js"></script>
+  <script src="Assets/plugins/slimScroll/jquery.slimscroll.min.js"></script>
   <!-- FastClick -->
-  <script src="../Template/plugins/fastclick/fastclick.min.js"></script>
+  <script src="Assets/plugins/fastclick/fastclick.min.js"></script>
   <!-- AdminLTE App -->
-  <script src="../Template/dist/js/app.min.js"></script>
+  <script src="Assets/dist/js/app.min.js"></script>
   <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-  <script src="../Template/dist/js/pages/dashboard.js"></script>
+  <script src="Assets/dist/js/pages/dashboard.js"></script>
   <!-- AdminLTE for demo purposes -->
-  <script src="../Template/dist/js/demo.js"></script>
+  <script src="Assets/dist/js/demo.js"></script>
   <!-- Button trigger modal -->
   <!-- Modal -->
   <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
