--- a/Assuty/profile.html
+++ b/Assuty/profile.html
@@ -8,29 +8,29 @@
   <!-- Tell the browser to be responsive to screen width -->
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
   <!-- Bootstrap 3.3.5 -->
-  <link rel="stylesheet" href="../Template/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="Assets/bootstrap/css/bootstrap.min.css">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <!-- Ionicons -->
   <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
   <!-- Theme style -->
-  <link rel="stylesheet" href="../Template/dist/css/AdminLTE.css">
+  <link rel="stylesheet" href="Assets/dist/css/AdminLTE.css">
   <!-- AdminLTE Skins. Choose a skin from the css/skins
          folder instead of downloading all of them to reduce the load. -->
-  <link rel="stylesheet" href="../Template/dist/css/skins/_all-skins.min.css">
+  <link rel="stylesheet" href="Assets/dist/css/skins/_all-skins.min.css">
   <!-- iCheck -->
-  <link rel="stylesheet" href="../Template/plugins/iCheck/flat/blue.css">
+  <link rel="stylesheet" href="Assets/plugins/iCheck/flat/blue.css">
   <!-- Morris chart -->
-  <link rel="stylesheet" href="../Template/plugins/morris/morris.css">
+  <link rel="stylesheet" href="Assets/plugins/morris/morris.css">
   <!-- jvectormap -->
-  <link rel="stylesheet" href="../Template/plugins/jvectormap/jquery-jvectormap-1.2.2.css">
+  <link rel="stylesheet" href="Assets/plugins/jvectormap/jquery-jvectormap-1.2.2.css">
   <!-- Date Picker -->
-  <link rel="stylesheet" href="../Template/plugins/datepicker/datepicker3.css">
+  <link rel="stylesheet" href="Assets/plugins/datepicker/datepicker3.css">
   <!-- Daterange picker -->
-  <link rel="stylesheet" href="../Template/plugins/daterangepicker/daterangepicker-bs3.css">
+  <link rel="stylesheet" href="Assets/plugins/daterangepicker/daterangepicker-bs3.css">
   <!-- bootstrap wysihtml5 - text editor -->
-  <link rel="stylesheet" href="../Template/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css">
-  <link rel="stylesheet" href="../Template/assets/css/style.css">
+  <link rel="stylesheet" href="Assets/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css">
+  <link rel="stylesheet" href="Assets/twitter-feed/css/style.css">
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
   <!--[if lt IE 9]>
@@ -103,13 +103,13 @@
             <!-- User Account: style can be found in dropdown.less -->
             <li class="dropdown user user-menu">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                <img src="../Template/dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
+                <img src="Assets/dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
                 <span class="hidden-xs">Alexander Pierce</span>
               </a>
               <ul class="dropdown-menu">
                 <!-- User image -->
                 <li class="user-header">
-                  <img src="../Template/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                  <img src="Assets/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
                   <p>
                     Alexander Pierce - Web Developer
                     <small>Member since Nov. 2012</small>
@@ -137,7 +137,7 @@
         <!-- Sidebar user panel -->
         <div class="user-panel">
           <div class="pull-left image">
-            <img src="../Template/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+            <img src="Assets/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
           </div>
           <div class="pull-left info">
             <p>Alexander Pierce</p>
@@ -160,7 +160,7 @@
           <li><a href="agent-workspace.html"><i class="fa fa-cogs"></i> <span>Workspace</span></a></li>
           <li class="active"><a href="profile.html"><i class="fa fa-user"></i> <span>Profile</span></a></li>
           <li><a href="feed.html"><i class="fa fa-dashboard"></i> <span>Feed</span></a></li>
-          <li><a href="../Assuty/statistics.html"><i class="fa fa-pie-chart"></i> <span>Statistics</span></a></li>
+          <li><a href="statistics.html"><i class="fa fa-pie-chart"></i> <span>Statistics</span></a></li>
           <li class="treeview">
             <a href="#">
               <i class="fa fa-ellipsis-h"></i> <span>Settings</span>
@@ -197,7 +197,7 @@
                     <h5 class="widget-user-desc">Agent</h5>
                   </div>
                   <div class="widget-user-image">
-                    <img class="img-circle" src="../Template/dist/img/user1-128x128.jpg" alt="User Avatar">
+                    <img class="img-circle" src="Assets/dist/img/user1-128x128.jpg" alt="User Avatar">
                   </div>
                   <div class="box-footer">
                     <div class="row">
@@ -300,43 +300,43 @@
   </div>
   <!-- ./wrapper -->
   <!-- jQuery 2.1.4 -->
-  <script src="../Template/plugins/jQuery/jQuery-2.1.4.min.js"></script>
+  <script src="Assets/plugins/jQuery/jQuery-2.1.4.min.js"></script>
   <!-- jQuery UI 1.11.4 -->
   <!-- <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script> -->
-  <script type="text/javascript" src="../Template/plugins/jQueryUI/jquery-ui.js"></script>
+  <script type="text/javascript" src="Assets/plugins/jQueryUI/jquery-ui.js"></script>
   <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
   <script>
   $.widget.bridge('uibutton', $.ui.button);
   </script>
   <!-- Bootstrap 3.3.5 -->
-  <script src="../Template/bootstrap/js/bootstrap.min.js"></script>
+  <script src="Assets/bootstrap/js/bootstrap.min.js"></script>
   <!-- Morris.js charts -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
-  <script src="../Template/plugins/morris/morris.min.js"></script>
+  <script src="Assets/plugins/morris/morris.min.js"></script>
   <!-- Sparkline -->
-  <script src="../Template/plugins/sparkline/jquery.sparkline.min.js"></script>
+  <script src="Assets/plugins/sparkline/jquery.sparkline.min.js"></script>
   <!-- jvectormap -->
-  <script src="../Template/plugins/jvectormap/jquery-jvectormap-1.2.2.min.js"></script>
-  <script src="../Template/plugins/jvectormap/jquery-jvectormap-world-mill-en.js"></script>
+  <script src="Assets/plugins/jvectormap/jquery-jvectormap-1.2.2.min.js"></script>
+  <script src="Assets/plugins/jvectormap/jquery-jvectormap-world-mill-en.js"></script>
   <!-- jQuery Knob Chart -->
-  <script src="../Template/plugins/knob/jquery.knob.js"></script>
+  <script src="Assets/plugins/knob/jquery.knob.js"></script>
   <!-- daterangepicker -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.2/moment.min.js"></script>
-  <script src="../Template/plugins/daterangepicker/daterangepicker.js"></script>
+  <script src="Assets/plugins/daterangepicker/daterangepicker.js"></script>
   <!-- datepicker -->
-  <script src="../Template/plugins/datepicker/bootstrap-datepicker.js"></script>
+  <script src="Assets/plugins/datepicker/bootstrap-datepicker.js"></script>
   <!-- Bootstrap WYSIHTML5 -->
-  <script src="../Template/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.all.min.js"></script>
+  <script src="Assets/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.all.min.js"></script>
   <!-- Slimscroll -->
-  <script src="../Template/plugins/slimScroll/jquery.slimscroll.min.js"></script>
+  <script src="Assets/plugins/slimScroll/jquery.slimscroll.min.js"></script>
   <!-- FastClick -->
-  <script src="../Template/plugins/fastclick/fastclick.min.js"></script>
+  <script src="Assets/plugins/fastclick/fastclick.min.js"></script>
   <!-- AdminLTE App -->
-  <script src="../Template/dist/js/app.min.js"></script>
+  <script src="Assets/dist/js/app.min.js"></script>
   <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-  <script src="../Template/dist/js/pages/dashboard.js"></script>
+  <script src="Assets/dist/js/pages/dashboard.js"></script>
   <!-- AdminLTE for demo purposes -->
-  <script src="../Template/dist/js/demo.js"></script>
+  <script src="Assets/dist/js/demo.js"></script>
   <!-- Button trigger modal -->
   <!-- Modal -->
   <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
